[package]
name = "fidelius"
version = "0.1.4"
authors = ["TheWebDevel <sathish@skcript.com>"]
edition = "2018"
description = "A CLI Tool to generate TOTP for any 2FA locally."
documentation = "https://github.com/TheWebDevel/fidelius"
homepage = "https://github.com/TheWebDevel/fidelius"
repository = "https://github.com/TheWebDevel/fidelius"
readme = "README.md"
keywords = ["cryptography", "config", "authentication"]
categories = ["command-line-utilities", "cryptography", "authentication"]
license = "MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
libreauth = "0.13.0"
preferences = "1.1.0"
clipboard = "0.5.0"
human-panic = "1.0.1"
